Fix infographics (no overflow)

--- a/features/polyExplorer/src/components/infographic/infographic.css
+++ b/features/polyExplorer/src/components/infographic/infographic.css
@@ -1,11 +1,12 @@
 .infographic {
     display: block;
     margin: 0 auto;
+    width: 100%;
 }
 
 .infographic svg {
     display: block;
-    overflow: visible;
+    width: 100%;
     margin: 12px auto;
 }
 
